--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div class="btn">
       <button onclick="startGame()">START GAME</button>
       <button onclick="newCard()">NEW CARD</button>
+      <p id="player-el"></p>
     </div>
   </body>
   <script src="/index.js"></script>
